// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribedModules should NOT render modules when api call returns modules but module is not enabled 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--margin-xlarge StyledProps--padding-xlarge StyledProps--background-white"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-medium StyledProps--margin-bottom-xlarge"
    >
      common.account.subscribedModules
    </p>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
    />
  </div>
</div>
`;

exports[`SubscribedModules should render link to subscriptions page only when no modules returned 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--margin-xlarge StyledProps--padding-xlarge StyledProps--background-white"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-medium StyledProps--margin-bottom-xlarge"
    >
      common.account.subscribedModules
    </p>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <a
          href="/account/undefined/settings/subscriptions"
        >
          common.account.visitSubscriptions.link
        </a>
        <p
          class="StyledProps--font StyledProps--main"
        >
          common.account.visitSubscriptions.description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscribedModules should render modules when api call returns modules 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--margin-xlarge StyledProps--padding-xlarge StyledProps--background-white"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-medium StyledProps--margin-bottom-xlarge"
    >
      common.account.subscribedModules
    </p>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
    >
      <div>
        <div
          class="bp3-card bp3-elevation-0 Card--card subscribedModules"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-large"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                  data-icon="ci-main"
                >
                  <svg
                    height="25"
                    viewBox="0 0 32 32"
                    width="25"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                      fill="url(#ci-main_svg__a)"
                      fill-rule="evenodd"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="ci-main_svg__a"
                        x1="-5.398"
                        x2="11.398"
                        y1="11.398"
                        y2="37.398"
                      >
                        <stop
                          stop-color="#73DFE7"
                        />
                        <stop
                          offset="1"
                          stop-color="#0095F7"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
                  >
                    COMMON.PURPOSE.CONTINUOUS
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-large StyledProps--color StyledProps--color-black"
                  >
                    common.purpose.ci.integration
                  </p>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--padding-xsmall StyledProps--margin-bottom-large StyledProps--border StyledProps--border-color-grey200"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--margin-right-xsmall"
                >
                  common.subscriptions.overview.plan:
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
                >
                  Enterprise(14 day Trial)
                </p>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-top StyledProps--padding-top-large StyledProps--padding-bottom-large StyledProps--padding-left-large"
          >
            <a
              class="manageBtn"
              href="/account/undefined/settings/subscriptions?moduleCard=CI"
            >
              common.manage
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
